--- a/public/styles/sass/_tweets.sass
+++ b/public/styles/sass/_tweets.sass
@@ -4,20 +4,25 @@
   margin: 1em 2em
   opacity: 0.5
   background-color: $background-color
+
   &:hover
     opacity: 1
     box-shadow: 5px 5px black
+
     .miniIcons
       display: inline
+
   .header
     background-color: $secondary-color
     width: 100%
     overflow: auto
+
   .icon
     height: 64px
     width: 64px
     border: 1px solid $primary-color
     border-radius: 5px
+
   .username,
   .icon,
   .shorthand
@@ -26,11 +31,13 @@
     color: $tetriary-color
     margin: 0.5em
     font-size: 1.5em
+
   .shorthand
     float: right
     margin-right: 1em
     margin-top: 1em
     font-size: 1em
+
   .message
     display: block
     border-bottom: 1px solid grey
@@ -40,14 +47,18 @@
     font-size: 1.2em
     color: $font-color
     background-color: $background-color
+    word-wrap: break-word
+
   .footer
     display: block
     color: $font-color
     padding: 0.5em
     font-size: 0.75em
     overflow: auto
+
     p
       display: inline-block
+
   .miniIcons
     list-style: none
     float: right
@@ -55,8 +66,10 @@
     padding: 0
     font-size: 1.25em
     display: none
+
     &:hover
       display: inline
+
     li
       display: inline
 
